# tenosr-mock

./: Cargo.toml  README.md  build.rs  expanded_code.rs
src/: accelerate.rs  backprop.rs  cpu_backend.rs  device.rs  dtype.rs  indexer.rs  layout.rs  lib.rs  op.rs  shape.rs  storage.rs  strided_index.rs  tensor.rs  variables.rs
